--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+classes: wide
 ---
 
-{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
+<!-- {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
 {% elsif page.header.video.id and page.header.video.provider %}
   {% include page__hero_video.html %}
@@ -13,6 +14,18 @@ layout: default
   {% assign breadcrumbs_enabled = page.breadcrumbs %}
 {% endif %}
 {% if page.url != "/" and breadcrumbs_enabled %}
+  {% unless paginator %}
+    {% include breadcrumbs.html %}
+  {% endunless %}
+{% endif %} -->
+
+{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
+  {% include page__hero.html %}
+{% elsif page.header.video.id and page.header.video.provider %}
+  {% include page__hero_video.html %}
+{% endif %}
+
+{% if page.url != "/" and site.breadcrumbs %}
   {% unless paginator %}
     {% include breadcrumbs.html %}
   {% endunless %}
@@ -32,8 +45,24 @@ layout: default
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title p-name" itemprop="headline">
             <a href="{{ page.url | absolute_url }}" class="u-url" itemprop="url">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</a>
-          </h1>{% endif %}
-          {% include page__meta.html %}
+          </h1>
+          {% endif %}
+
+          {% if page.last_modified_at and page.date %}
+            <p class="page__meta"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y.%m.%d" }}</time>&nbsp&nbsp&nbsp<strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ "Updated:" }}</strong> <time datetime="{{ page.last_modified_at | date: date_to_xmlschema }}">{{ page.last_modified_at | date: "%Y.%m.%d" }}</time></p>
+          {% elsif page.date %}
+            <p class="page__meta"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y.%m.%d" }}</time></p>
+          {% elsif page.last_modified_at %}
+            <p class="page__meta"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ "Updated:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y.%m.%d" }}</time></p>
+          {% endif %}
+          {% if site.category_archive.type and page.categories[0] and site.tag_archive.type and page.tags[0] %}
+            {% include category-list.html %}{% include tag-list.html %}
+          {% elsif site.category_archive.type and page.categories[0] %}
+            {% include category-list.html %}
+          {% elsif site.tag_archive.type and page.tags[0] %}
+            {% include tag-list.html %} 
+          {% endif %}
+          <!-- {% include page__meta.html %} -->
         </header>
       {% endunless %}
 
@@ -48,19 +77,26 @@ layout: default
         {% endif %}
         {{ content }}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+
+        <p></p>
+          <h4 class="page__meta-title"><span style="font-family:'Coming Soon'; color:#fcd14f;">{{ page.categories[0] }}</span> <span style="font-family:'Cafe24Oneprettynight';">See Other Posts in this Category</span></h4>
+          {% include post_pagination.html %}
+        <p></p>
+
       </section>
 
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
         {% endif %}
-        {% include page__taxonomy.html %}
-        {% include page__date.html %}
+        {% if page.share %}{% include social-share.html %}{% endif %}
+        <!-- {% include page__taxonomy.html %}
+        {% include page__date.html %} -->
       </footer>
 
-      {% if page.share %}{% include social-share.html %}{% endif %}
+      <!-- {% if page.share %}{% include social-share.html %}{% endif %} -->
 
-      {% include post_pagination.html %}
+      <!-- {% include post_pagination.html %} -->
     </div>
 
     {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
