--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -13,10 +13,11 @@ $paragraph-indent: false !default; // true, false (default)
 $indent-var: 1.3em !default;
 
 /* system typefaces */
-$serif: Georgia, Times, serif !default;
-$sans-serif: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
+$serif: "Humanbumsuk" Georgia, Times, serif !default;
+$sans-serif: "Humanbumsuk", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
-$monospace: Monaco, Consolas, "Lucida Console", monospace !default;
+$monospace: "Humanbumsuk",Monaco, Consolas, "Lucida Console", monospace !default;
+$Humanbumsuk: "Humanbumsuk" !default;
 
 /* sans serif typefaces */
 $sans-serif-narrow: $sans-serif !default;
