--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -24,6 +24,9 @@
         <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
+    {% if site.category_archive.type and post.categories[0] and site.tag_archive.type and post.tags[0] %}
+      {%- include post__taxonomy.html -%}
+    {% endif %}
     {% include page__meta.html type=include.type %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
   </article>
