--- a/_includes/category-list.html
+++ b/_includes/category-list.html
@@ -20,7 +20,7 @@
     {% for hash in category_hashes %}
       {% assign keyValue = hash | split: '|' %}
       {% capture category_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
-      <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item-category" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep"> </span>{% endunless %}
+      <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item-category p-category" rel="tag">{{ category_word }}</a>{% unless forloop.last %}<span class="sep"> </span>{% endunless %}
     {% endfor %}
     </span>
     <!-- <strong><i class="fas fa-fw fa-folder-open" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].categories_label | default: "Categories:" }} </strong>
