--- a/_sass/minimal-mistakes/skins/_custom.scss
+++ b/_sass/minimal-mistakes/skins/_custom.scss
@@ -1,6 +1,6 @@
-$background-color: #252321 !default;
+$background-color: #404146 !default;
 $text-color: #eaeaea !default;
-$primary-color: #B05321 !default;
+$primary-color: #eac760 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: #4D5357 !default;
 $code-background-color-dark: #3F4447 !default;
@@ -8,10 +8,13 @@ $form-background-color: mix(#000, $background-color, 15%) !default;
 $footer-background-color: mix(#000, $background-color, 20%) !default;
 $link-color: mix(#00adb5, $text-color, 40%) !default;
 $link-color-hover: mix(#fff, $link-color, 25%) !default;
-$link-color-visited: mix(#00adb5, $text-color, 40%) !default;
+// $link-color-visited: mix(rgb(13, 14, 13), $primary-color, 20%) !default; 
+$link-color-visited: #7ab8b9 !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: mix(#000, $text-color, 20%) !default;
 $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
+
+
 
 .author__urls.social-icons .svg-inline--fa,
 .page__footer-follow .social-icons .svg-inline--fa {
@@ -21,3 +24,4 @@ $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
 .ais-search-box .ais-search-box--input {
   background-color: $form-background-color;
 }
+$base00: #2d323c !default;
