--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,10 @@ classes: wide
       <a href="#site-nav"> <i class="fas fa-angle-double-up fa-2x"></i></a>
     </aside>
 
+    <!-- <aside class="sidebar__top">
+      <a href="#site-nav"> <i class="fas fa-angle-double-up"></i></a>
+    </aside> -->
+
     {% include scripts.html %}
 
         
@@ -63,12 +67,12 @@ classes: wide
     <script>
         L2Dwidget.init({
             "model": {
-                jsonPath: "https://unpkg.com/live2d-widget-model-tororo/assets/tororo.model.json",
+                jsonPath: "https://unpkg.com/live2d-widget-model-hijiki/assets/hijiki.model.json",
                 "scale": 0.5
             },
             "display": {
                 "position": "right",
-                "width": 50,
+                "width": 60,
                 "height": 100,
                 "hOffset": 0,
                 "vOffset": -20
