Enable search, font

--- a/_includes/post_pagination.html
+++ b/_includes/post_pagination.html
@@ -34,17 +34,17 @@
     {% if prev_post %}
       <a href="{{ prev_post.url }}" class="pagination_prev_next--pager"><span class="prev_next">Previous Post  &nbsp</span>{{ prev_post.title }}</a>
     {% else %}
-      <a href="#" class="pagination_prev_next--pager disabled-first-child">첫 번째 글입니다</a>
+      <a href="#" class="pagination_prev_next--pager disabled-first-child">This is first post</a>
     {% endif %}
     {% if next_post %}
       <a href="{{ next_post.url }}" class="pagination_prev_next--pager"><span class="prev_next">Next Post  &nbsp  </span>{{ next_post.title }}</a>
     {% else %}
-      <a href="#" class="pagination_prev_next--pager disabled-last-child ">가장 최근 글입니다</a>
+      <a href="#" class="pagination_prev_next--pager disabled-last-child ">This is most recent post</a>
     {% endif %}
   </nav>
 {% else %}
-  <a href="#" class="pagination_prev_next--pager disabled-first-child">첫 번째 글입니다</a>
-  <a href="#" class="pagination_prev_next--pager disabled-last-child ">가장 최근 글입니다</a>
+  <a href="#" class="pagination_prev_next--pager disabled-first-child">This is first post</a>
+  <a href="#" class="pagination_prev_next--pager disabled-last-child ">This is most recent post</a>
 {% endif %}
 
 <!--
