--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -69,7 +69,7 @@ body {
 }
 
 .page__title {
-  font-family: $Humanbumsuk;
+  font-family: 'Galmuri9';
   margin-top: 0;
   line-height: 1;
   color: mix(#fff, $primary-color, 40%);
