--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -13,7 +13,7 @@ $paragraph-indent: false !default; // true, false (default)
 $indent-var: 1.3em !default;
 
 /* system typefaces */
-$serif: "Humanbumsuk" Georgia, Times, serif !default;
+$serif: "Galmuri9" Georgia, Times, serif !default;
 $sans-serif: "Humanbumsuk", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 $monospace: "Humanbumsuk",Monaco, Consolas, "Lucida Console", monospace !default;
