feat: Added Category field

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -564,7 +564,7 @@
   display: block;
   margin: 0.5rem 0;
   padding: 0.25rem 0;
-  font-family: $Humanbumsuk;
+  font-family: "Galmuri9";
   font-size: $type-size-3;
   font-weight: bold;
   // text-transform: uppercase;
